feat(security): Implements mandatory email verification flow
               To increase the security of the platform, this commit introduces a flow where users must verify their email address before they can access the main features of the application.

               - **Verification Logic:** The UserService now handles the generation and resending of verification tokens. The UserEntity has been updated to store the user's verification status.
               - **Endpoint Protection:** The SecurityConfig has been modified to restrict unverified users from accessing protected endpoints, using the CustomUserDetailsService to check the account status.
               - **User Communication:** The EmailService and the email-verification.html template have been adjusted to reflect the new verification process.
               - **Configuration:** Adjustments have been made to the CorsConfig to ensure correct communication with the new frontend pages related to this flow.